tests/baselines/reference/privacyTopLevelAmbientExternalModuleImportWithExport.errors.txt
tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithExport_core.ts(15,12): error TS2323: Cannot redeclare exported variable 'publicUse_im_public_mi_public'.
tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithExport_core.ts(17,12): error TS2323: Cannot redeclare exported variable 'publicUse_im_public_mi_public'.


==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithExport_core.ts (2 errors) ====
    ///<reference path='privacyTopLevelAmbientExternalModuleImportWithExport_require2.ts'/>
    ///<reference path='privacyTopLevelAmbientExternalModuleImportWithExport_require3.ts'/>
    // Privacy errors - importing private elements
    export import im_public_mi_private = require("./privacyTopLevelAmbientExternalModuleImportWithExport_require");
    export import im_public_mu_private = require("./privacyTopLevelAmbientExternalModuleImportWithExport_require1");
    export import im_public_mi_public = require("m");
    export import im_public_mu_public = require("m2");
    
    // Usage of privacy error imports
    var privateUse_im_public_mi_private = new im_public_mi_private.c_public();
    export var publicUse_im_public_mi_private = new im_public_mi_private.c_public();
    var privateUse_im_public_mu_private = new im_public_mu_private.c_public();
    export var publicUse_im_public_mu_private = new im_public_mu_private.c_public();
    var privateUse_im_public_mi_public = new im_public_mi_public.c_private();
    export var publicUse_im_public_mi_public = new im_public_mi_public.c_private();
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'publicUse_im_public_mi_public'.
    var privateUse_im_public_mi_public = new im_public_mi_public.c_private();
    export var publicUse_im_public_mi_public = new im_public_mi_public.c_private();
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'publicUse_im_public_mi_public'.
    
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithExport_require.ts (0 errors) ====
    // Public elements
    export class c_public {
        foo: string;
    }
    
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithExport_require1.ts (0 errors) ====
    export class c_public {
        bar: string;
    }
    
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithExport_require2.ts (0 errors) ====
    // private elements
    // Export - Error ambient modules allowed only in global
    declare module 'm' {
        export class c_private {
            baz: string;
        }
    }
    
    
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithExport_require3.ts (0 errors) ====
    declare module 'm2' {
        export class c_private {
            bing: string;
        }
    }
    